--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   <link rel="stylesheet" href="atomic.css">
 </head>
 <body class="M(0)">
-  <h1 class="Ta(c) Fw(n)">Acss Gulp Starter</h1>
+  <h1 class="Ta(c) Fw(n) D(f)">Acss Gulp Starter</h1>
 </body>
 </html>
