--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Acss Gulp Starter</title>
-  <link rel="stylesheet" href="atomic.css">
+  <link rel="stylesheet" href="dist/atomic.css">
 </head>
 <body class="M(0)">
-  <h1 class="Ta(c) Fw(n) D(f)">Acss Gulp Starter</h1>
+  <h1 class="Ta(c) Fw(n) C(blue)">Acss Gulp Starter</h1>
 </body>
 </html>
