rm acss config duplicates and mv -> build-utils/acss

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <link rel="stylesheet" href="dist/atomic.css">
 </head>
 <body class="M(0)">
-  <h1 class="Ta(c) Fw(n) C(brandColor)">Acss Gulp Starter</h1>
+  <h1 class="Ta(c) Fw(n) C(brand)">Acss Gulp Starter</h1>
 </body>
 </html>
